--- a/index.html
+++ b/index.html
@@ -98,18 +98,18 @@
               <tr onmouseout="hitl_stop()" onmouseover="hitl_start()" bgcolor="#ffffd0">
                 <td style="padding:16px;width:20%;vertical-align:middle">
                   <div class="one">
-                    <div class="two" id='hitl_image'>
+                    <div class="two" id='hitl_after'>
                       <img src='images/hitl_after.png' width=100% alt="HITL visualization">
                     </div>
                     <img id='hitl_before' src='images/hitl_before.png' width=100% alt="HITL placeholder">
                   </div>
                   <script type="text/javascript">
                     function hitl_start() {
-                      document.getElementById('hitl_image').style.opacity = "1";
+                      document.getElementById('hitl_after').style.opacity = "1";
                       document.getElementById('hitl_before').style.opacity = "0";
                     }
                     function hitl_stop() {
-                      document.getElementById('hitl_image').style.opacity = "0";
+                      document.getElementById('hitl_after').style.opacity = "0";
                       document.getElementById('hitl_before').style.opacity = "1";
                     }
                     hitl_stop()
@@ -141,18 +141,18 @@
               <tr onmouseout="panc_stop()" onmouseover="panc_start()" bgcolor="#ffffd0">
                 <td style="padding:16px;width:20%;vertical-align:middle">
                   <div class="one">
-                    <div class="two" id='panc_image'>
+                    <div class="two" id='panc_after'>
                       <img src='images/panc_after.png' width=100% alt="PANC visualization">
                     </div>
                     <img id='panc_before' src='images/panc_before.png' width=100% alt="PANC placeholder">
                   </div>
                   <script type="text/javascript">
                     function panc_start() {
-                      document.getElementById('panc_image').style.opacity = "1";
+                      document.getElementById('panc_after').style.opacity = "1";
                       document.getElementById('panc_before').style.opacity = "0";
                     }
                     function panc_stop() {
-                      document.getElementById('panc_image').style.opacity = "0";
+                      document.getElementById('panc_after').style.opacity = "0";
                       document.getElementById('panc_before').style.opacity = "1";
                     }
                     panc_stop()
@@ -182,18 +182,18 @@
             <tr onmouseout="speech_stop()" onmouseover="speech_start()">
                   <td style="padding:16px;width:20%;vertical-align:middle">
                     <div class="one">
-                      <div class="two" id='speech_image'>
+                      <div class="two" id='speech_after'>
                         <img src='images/euronoise_after.png' width=100% alt="Speech visualization">
                       </div>
                       <img id='speech_before' src='images/euronoise_before.png' width=100% alt="Speech placeholder">
                     </div>
                     <script type="text/javascript">
                       function speech_start() {
-                        document.getElementById('speech_image').style.opacity = "1";
+                        document.getElementById('speech_after').style.opacity = "1";
                         document.getElementById('speech_before').style.opacity = "0";
                       }
                       function speech_stop() {
-                        document.getElementById('speech_image').style.opacity = "0";
+                        document.getElementById('speech_after').style.opacity = "0";
                         document.getElementById('speech_before').style.opacity = "1";
                       }
                       speech_stop()
@@ -225,18 +225,18 @@
               <tr onmouseout="dcai_stop()" onmouseover="dcai_start()">
                 <td style="padding:16px;width:20%;vertical-align:middle">
                   <div class="one">
-                    <div class="two" id='dcai_image'>
+                    <div class="two" id='dcai_after'>
                       <img src='images/dcai_after.png' width=100% alt="DCAI visualization">
                     </div>
                     <img id='dcai_before' src='images/dcai_before.png' width=100% alt="DCAI placeholder">
                   </div>
                   <script type="text/javascript">
                     function dcai_start() {
-                      document.getElementById('dcai_image').style.opacity = "1";
+                      document.getElementById('dcai_after').style.opacity = "1";
                       document.getElementById('dcai_before').style.opacity = "0";
                     }
                     function dcai_stop() {
-                      document.getElementById('dcai_image').style.opacity = "0";
+                      document.getElementById('dcai_after').style.opacity = "0";
                       document.getElementById('dcai_before').style.opacity = "1";
                     }
                     dcai_stop()
@@ -269,18 +269,18 @@
               <tr onmouseout="thesis_stop()" onmouseover="thesis_start()">
                 <td style="padding:16px;width:20%;vertical-align:middle">
                   <div class="one">
-                    <div class="two" id='thesis_image'>
+                    <div class="two" id='thesis_after'>
                       <img src='images/thesis_after.png' width=100%>
                     </div>
                     <img id='thesis_before' src='images/thesis_before.png' width=100%>
                   </div>
                   <script type="text/javascript">
                     function thesis_start() {
-                      document.getElementById('thesis_image').style.opacity = "1";
+                      document.getElementById('thesis_after').style.opacity = "1";
                       document.getElementById('thesis_before').style.opacity = "0";
                     }
                     function thesis_stop() {
-                      document.getElementById('thesis_image').style.opacity = "0";
+                      document.getElementById('thesis_after').style.opacity = "0";
                       document.getElementById('thesis_before').style.opacity = "1";
                     }
                     thesis_stop()
