--- a/index.html
+++ b/index.html
@@ -98,30 +98,17 @@
               <tr onmouseout="hitl_stop()" onmouseover="hitl_start()" bgcolor="#ffffd0">
                 <td style="padding:16px;width:20%;vertical-align:middle">
                   <div class="one">
-                    <div class="two" id='hitl_after'>
+                    <div class="two" id='hitl_image'>
                       <img src='images/hitl_after.png' width=100% alt="HITL visualization">
                     </div>
-                    <img id='hitl_before' src='images/hitl_before.png' width=100% alt="HITL placeholder">
+                    <img src='images/hitl_before.png' width=100% alt="HITL placeholder">
                   </div>
                   <script type="text/javascript">
-                    var hitl_loaded = false;
                     function hitl_start() {
-                      var img = document.querySelector('#hitl_after img');
-                      if (hitl_loaded || img.complete) {
-                        hitl_loaded = true;
-                        document.getElementById('hitl_after').style.opacity = "1";
-                        document.getElementById('hitl_before').style.opacity = "0";
-                      } else {
-                        img.onload = function() {
-                          hitl_loaded = true;
-                          document.getElementById('hitl_after').style.opacity = "1";
-                          document.getElementById('hitl_before').style.opacity = "0";
-                        };
-                      }
+                      document.getElementById('hitl_image').style.opacity = "1";
                     }
                     function hitl_stop() {
-                      document.getElementById('hitl_after').style.opacity = "0";
-                      document.getElementById('hitl_before').style.opacity = "1";
+                      document.getElementById('hitl_image').style.opacity = "0";
                     }
                     hitl_stop()
                   </script>
@@ -152,30 +139,17 @@
               <tr onmouseout="panc_stop()" onmouseover="panc_start()" bgcolor="#ffffd0">
                 <td style="padding:16px;width:20%;vertical-align:middle">
                   <div class="one">
-                    <div class="two" id='panc_after'>
+                    <div class="two" id='panc_image'>
                       <img src='images/panc_after.png' width=100% alt="PANC visualization">
                     </div>
-                    <img id='panc_before' src='images/panc_before.png' width=100% alt="PANC placeholder">
+                    <img src='images/panc_before.png' width=100% alt="PANC placeholder">
                   </div>
                   <script type="text/javascript">
-                    var panc_loaded = false;
                     function panc_start() {
-                      var img = document.querySelector('#panc_after img');
-                      if (panc_loaded || img.complete) {
-                        panc_loaded = true;
-                        document.getElementById('panc_after').style.opacity = "1";
-                        document.getElementById('panc_before').style.opacity = "0";
-                      } else {
-                        img.onload = function() {
-                          panc_loaded = true;
-                          document.getElementById('panc_after').style.opacity = "1";
-                          document.getElementById('panc_before').style.opacity = "0";
-                        };
-                      }
+                      document.getElementById('panc_image').style.opacity = "1";
                     }
                     function panc_stop() {
-                      document.getElementById('panc_after').style.opacity = "0";
-                      document.getElementById('panc_before').style.opacity = "1";
+                      document.getElementById('panc_image').style.opacity = "0";
                     }
                     panc_stop()
                   </script>
@@ -204,30 +178,17 @@
             <tr onmouseout="speech_stop()" onmouseover="speech_start()">
                   <td style="padding:16px;width:20%;vertical-align:middle">
                     <div class="one">
-                      <div class="two" id='speech_after'>
+                      <div class="two" id='speech_image'>
                         <img src='images/euronoise_after.png' width=100% alt="Speech visualization">
                       </div>
-                      <img id='speech_before' src='images/euronoise_before.png' width=100% alt="Speech placeholder">
+                      <img src='images/euronoise_before.png' width=100% alt="Speech placeholder">
                     </div>
                     <script type="text/javascript">
-                      var speech_loaded = false;
                       function speech_start() {
-                        var img = document.querySelector('#speech_after img');
-                        if (speech_loaded || img.complete) {
-                          speech_loaded = true;
-                          document.getElementById('speech_after').style.opacity = "1";
-                          document.getElementById('speech_before').style.opacity = "0";
-                        } else {
-                          img.onload = function() {
-                            speech_loaded = true;
-                            document.getElementById('speech_after').style.opacity = "1";
-                            document.getElementById('speech_before').style.opacity = "0";
-                          };
-                        }
+                        document.getElementById('speech_image').style.opacity = "1";
                       }
                       function speech_stop() {
-                        document.getElementById('speech_after').style.opacity = "0";
-                        document.getElementById('speech_before').style.opacity = "1";
+                        document.getElementById('speech_image').style.opacity = "0";
                       }
                       speech_stop()
                     </script>
@@ -258,30 +219,17 @@
               <tr onmouseout="dcai_stop()" onmouseover="dcai_start()">
                 <td style="padding:16px;width:20%;vertical-align:middle">
                   <div class="one">
-                    <div class="two" id='dcai_after'>
+                    <div class="two" id='dcai_image'>
                       <img src='images/dcai_after.png' width=100% alt="DCAI visualization">
                     </div>
-                    <img id='dcai_before' src='images/dcai_before.png' width=100% alt="DCAI placeholder">
+                    <img src='images/dcai_before.png' width=100% alt="DCAI placeholder">
                   </div>
                   <script type="text/javascript">
-                    var dcai_loaded = false;
                     function dcai_start() {
-                      var img = document.querySelector('#dcai_after img');
-                      if (dcai_loaded || img.complete) {
-                        dcai_loaded = true;
-                        document.getElementById('dcai_after').style.opacity = "1";
-                        document.getElementById('dcai_before').style.opacity = "0";
-                      } else {
-                        img.onload = function() {
-                          dcai_loaded = true;
-                          document.getElementById('dcai_after').style.opacity = "1";
-                          document.getElementById('dcai_before').style.opacity = "0";
-                        };
-                      }
+                      document.getElementById('dcai_image').style.opacity = "1";
                     }
                     function dcai_stop() {
-                      document.getElementById('dcai_after').style.opacity = "0";
-                      document.getElementById('dcai_before').style.opacity = "1";
+                      document.getElementById('dcai_image').style.opacity = "0";
                     }
                     dcai_stop()
                   </script>
@@ -313,30 +261,17 @@
               <tr onmouseout="thesis_stop()" onmouseover="thesis_start()">
                 <td style="padding:16px;width:20%;vertical-align:middle">
                   <div class="one">
-                    <div class="two" id='thesis_after'>
+                    <div class="two" id='thesis_image'>
                       <img src='images/thesis_after.png' width=100%>
                     </div>
-                    <img id='thesis_before' src='images/thesis_before.png' width=100%>
+                    <img src='images/thesis_before.png' width=100%>
                   </div>
                   <script type="text/javascript">
-                    var thesis_loaded = false;
                     function thesis_start() {
-                      var img = document.querySelector('#thesis_after img');
-                      if (thesis_loaded || img.complete) {
-                        thesis_loaded = true;
-                        document.getElementById('thesis_after').style.opacity = "1";
-                        document.getElementById('thesis_before').style.opacity = "0";
-                      } else {
-                        img.onload = function() {
-                          thesis_loaded = true;
-                          document.getElementById('thesis_after').style.opacity = "1";
-                          document.getElementById('thesis_before').style.opacity = "0";
-                        };
-                      }
+                      document.getElementById('thesis_image').style.opacity = "1";
                     }
                     function thesis_stop() {
-                      document.getElementById('thesis_after').style.opacity = "0";
-                      document.getElementById('thesis_before').style.opacity = "1";
+                      document.getElementById('thesis_image').style.opacity = "0";
                     }
                     thesis_stop()
                   </script>
