--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
               <tr onmouseout="hitl_stop()" onmouseover="hitl_start()" bgcolor="#ffffd0">
                 <td style="padding:16px;width:20%;vertical-align:middle">
                   <div class="one">
-                    <div class="two" id='hitl_image'>
+                    <div class="two" id='hitl_image' style="background-color:#ffffd0;">
                       <img src='images/hitl_after.png' width=100% alt="HITL visualization">
                     </div>
                     <img src='images/hitl_before.png' width=100% alt="HITL placeholder">
@@ -139,7 +139,7 @@
               <tr onmouseout="panc_stop()" onmouseover="panc_start()" bgcolor="#ffffd0">
                 <td style="padding:16px;width:20%;vertical-align:middle">
                   <div class="one">
-                    <div class="two" id='panc_image'>
+                    <div class="two" id='panc_image' style="background-color:#ffffd0;">
                       <img src='images/panc_after.png' width=100% alt="PANC visualization">
                     </div>
                     <img src='images/panc_before.png' width=100% alt="PANC placeholder">
