Revise description of spectral segmentation method

--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
                   <!-- | <a href="javascript:void(0)" class="bibtex-link" onclick="showBibtexModal('data/panc.bib')">bibtex</a> -->
                   <p></p>
                   <p>
-                    A weakly-supervised spectral segmentation framework using minimal annotated visual tokens to produce stable, controllable object masks.
+                    A weakly supervised spectral segmentation method that injects a few annotated tokens into a token–affinity graph to bias normalized-cut clustering for stable, controllable object masks.
                   </p>
                 </td>
               </tr>
