Update links and text in index.html

--- a/index.html
+++ b/index.html
@@ -49,19 +49,20 @@
                   <p style="text-align:center">
 
                     
-                    <a href="data/Resume_JG.pdf">Resume</a>
+                    <a href="data/Resume_JG.pdf">CV</a>
                     &nbsp; | &nbsp;
                     <a href="https://scholar.google.es/citations?user=wT7WzX8AAAAJ&hl=es&authuser=1">Scholar</a>
-                    &nbsp; | &nbsp;
-                    <a href="https://github.com/jgnav">GitHub</a>
-                    &nbsp; | &nbsp;
+                    <!-- &nbsp; | &nbsp;
                     <a href="https://www.researchgate.net/profile/Juan-Gutierrez-178">ResearchGate</a>
                     &nbsp; | &nbsp;
-                    <a href="https://orcid.org/0009-0001-6827-5153">ORCID</a>
+                    <a href="https://orcid.org/0009-0001-6827-5153">ORCID</a> -->
                     &nbsp; | &nbsp;
                     <a href="https://www.linkedin.com/in/juan-gutierrez-navarro/">LinkedIn</a>
                     &nbsp; | &nbsp;
                     <a href="https://x.com/jgnav_">X</a>
+                    &nbsp; | &nbsp;
+                    <a href="https://github.com/jgnav">GitHub</a>
+                    
                   </p>
                 </td>
                 <td style="padding:2.5%;width:40%;max-width:40%">
