--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <title>Juan Gutiérrez</title>
 
   <meta name="author" content="Juan Gutiérrez">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="viewport" content="width=1024">
 
   <link rel="stylesheet" type="text/css" href="stylesheet.css">
   <link rel="icon"
