--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
                   </script>
                 </td>
                 <td style="padding:8px;width:80%;vertical-align:middle">
-                  <a href="data/panc.pdf">
+                  <a href="https://arxiv.org/abs/2510.21798">
                     <span class="papertitle">PANC: Prior-Aware Normalized Cut for Object Segmentation</span>
                   </a>
                   <br>
@@ -125,8 +125,8 @@
                   <br>
                   <em>Preprint</em>, 2026
                   <br>
-                  <a href="data/panc.pdf">pdf</a> 
-                  <!-- | <a href="javascript:void(0)" class="bibtex-link" onclick="showBibtexModal('data/panc.bib')">bibtex</a> -->
+                  <a href="https://arxiv.org/abs/2510.21798">arXiv</a> 
+                  | <a href="javascript:void(0)" class="bibtex-link" onclick="showBibtexModal('data/panc.bib')">bibtex</a>
                   <p></p>
                   <p>
                     A weakly supervised spectral segmentation method that injects a few annotated tokens into a token–affinity graph to bias normalized-cut clustering for stable, controllable object masks.
@@ -154,7 +154,7 @@
                   </script>
                 </td>
                 <td style="padding:8px;width:80%;vertical-align:middle">
-                  <a href="data/hitl.pdf">
+                  <a href="https://arxiv.org/abs/2602.06912">
                     <span class="papertitle">An Evaluation of Hybrid Annotation Workflows on High-Ambiguity Spatiotemporal Video Footage</span>
                   </a>
                   <br>
@@ -166,8 +166,8 @@
                   <br>
                   <em>Preprint</em>, 2026
                   <br>
-                  <a href="data/hitl.pdf">pdf</a> 
-                  <!-- | <a href="javascript:void(0)" class="bibtex-link" onclick="showBibtexModal('data/hitl.bib')">bibtex</a> -->
+                  <a href="https://arxiv.org/abs/2602.06912">arXiv</a> 
+                  | <a href="javascript:void(0)" class="bibtex-link" onclick="showBibtexModal('data/hitl.bib')">bibtex</a>
                   <p></p>
                   <p>
                     Benchmarking assisted annotation workflows using fine-tuned vision-language model for video.
@@ -328,16 +328,30 @@
                 </td>
 
                 <td style="padding:8px; width:80%; vertical-align:middle;">
-                  <strong>Teaching Assistant</strong>
-                  <br>
                   - Design of Communications Systems and Equipment (M.S in Signal Theory and Communications, 1st course, UPM)
                   <br>
                   - Computing and Visualization Tools (B.S in Telecommunication Engineering, 2nd course, UPM)
+                </td>
+              </tr>
+
+              <tr>
+                <td align="center"
+                  style="background-color: #d4c8a8; border-radius: 12px; width:20%; vertical-align:middle; padding:16px;">
+                  <h2 style="margin:0; color: #333;">Thesis Supervisor</h2>
+                </td>
+
+                <td style="padding:8px; width:80%; vertical-align:middle;">
+                  (B.S.)
                   <br>
+                  - <a href="https://oa.upm.es/83613/">Development of a proof of concept for AI-supported video annotation</a> 
                   <br>
-                  <strong>Thesis Supervisor</strong>
+                  - Development and evaluation of a video summary generation system using multimodal models
                   <br>
-                  - Supervised two M.S. and two B.S. theses
+                  (M.S.)
+                  <br>
+                  - Analysis of crossmodal representation and understanding of actions using CLIP
+                  <br>
+                  - <a href="https://oa.upm.es/87977/">Development of a mass search tool for digital assets based on cross-modal representations</a>
                 </td>
               </tr>
 
