Enhance author section with degree formatting and additional names

--- a/index.html
+++ b/index.html
@@ -341,17 +341,25 @@
                 </td>
 
                 <td style="padding:8px; width:80%; vertical-align:middle;">
-                  (B.S.)
+                    <strong>B.S.</strong>
                   <br>
                   - <a href="https://oa.upm.es/83613/">Development of a proof of concept for AI-supported video annotation</a> 
                   <br>
+                  &nbsp;&nbsp;&nbsp;Fernando Castell Miñón  
+                  <br>
                   - Development and evaluation of a video summary generation system using multimodal models
                   <br>
-                  (M.S.)
+                  &nbsp;&nbsp;&nbsp;Andrés Velasco Sánchez
+                  <br>
+                    <strong>M.S.</strong>
                   <br>
                   - Analysis of crossmodal representation and understanding of actions using CLIP
                   <br>
+                  &nbsp;&nbsp;&nbsp;Imanol Torres Inchaurza
+                  <br>
                   - <a href="https://oa.upm.es/87977/">Development of a mass search tool for digital assets based on cross-modal representations</a>
+                  <br>
+                  &nbsp;&nbsp;&nbsp;Pablo Regodón Cerezo
                 </td>
               </tr>
 
