Fix degree formatting in author section

--- a/index.html
+++ b/index.html
@@ -341,7 +341,7 @@
                 </td>
 
                 <td style="padding:8px; width:80%; vertical-align:middle;">
-                    <strong>B.S.</strong>
+                    <strong>B.S</strong>
                   <br>
                   - <a href="https://oa.upm.es/83613/">Development of a proof of concept for AI-supported video annotation</a> 
                   <br>
@@ -351,7 +351,7 @@
                   <br>
                   &nbsp;&nbsp;&nbsp;Andrés Velasco Sánchez
                   <br>
-                    <strong>M.S.</strong>
+                    <strong>M.S</strong>
                   <br>
                   - Analysis of crossmodal representation and understanding of actions using CLIP
                   <br>
