Clean up HTML by removing <br> tags and updating table
Removed unnecessary <br> tags and adjusted table styles.

--- a/index.html
+++ b/index.html
@@ -91,10 +91,7 @@
             </tbody>
           </table>
 
-          <table
-            style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;">
-            <tbody>
-
+          <table style="width:100%;border:0px;border-spacing:0px 10px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
 
               <tr onmouseout="panc_stop()" onmouseover="panc_start()" bgcolor="#ffffd0">
                 <td style="padding:16px;width:20%;vertical-align:middle">
@@ -133,8 +130,6 @@
                   </p>
                 </td>
               </tr>
-
-              <br>
 
                 <tr onmouseout="hitl_stop()" onmouseover="hitl_start()" bgcolor="#ffffd0">
                 <td style="padding:16px;width:20%;vertical-align:middle">
@@ -175,8 +170,6 @@
                   </p>
                 </td>
               </tr>
-
-              <br>
 
         
             <tr onmouseout="speech_stop()" onmouseover="speech_start()">
@@ -219,8 +212,6 @@
                   </td>
                 </tr>
 
-              <br>
-
 
               <tr onmouseout="dcai_stop()" onmouseover="dcai_start()">
                 <td style="padding:16px;width:20%;vertical-align:middle">
@@ -261,9 +252,6 @@
                   </p>
                 </td>
               </tr>
-
-              <br>
-
 
 
               <tr onmouseout="thesis_stop()" onmouseover="thesis_start()">
