Add news section with recent updates to index.html

--- a/index.html
+++ b/index.html
@@ -1,3 +1,16 @@
+          <style>
+            .news-date {
+              background: #f0f0f0;
+              border-radius: 12px;
+              padding: 2px 10px;
+              margin-right: 8px;
+              font-weight: bold;
+              display: inline-block;
+            }
+            .news-section {
+              margin-bottom: 32px;
+            }
+          </style>
 <!DOCTYPE HTML>
 <html lang="en">
 
@@ -78,6 +91,12 @@
             <tbody>
               <tr>
                 <td style="padding:16px;width:100%;vertical-align:middle">
+                   <div class="news-section">
+                     <h2>News</h2>
+                     <ul>
+                       <li><span class="news-date">02/26</span> I am reviewer at <a href="https://icml.cc/">ICML'26</a>.</li>
+                     </ul>
+                   </div>
                   <h2>Research</h2>
                   <p>
                     I'm interested in the principles of self-supervised representation learning for image and video
